<?xml version="1.0"?>
<package>
  <name>walrus_joystick_controller</name>
  <version>0.0.0</version>
  <description>The walrus_joystick_controller package</description>

  <maintainer email="mwills@wpi.edu">Mitchell Wills</maintainer>

  <license>BSD</license>

  <url type="website">http://robot.wpi.edu/walrus</url>
  <url type="repository">https://github.com/RIVeR-Lab/walrus</url>

  <author email="mwills@wpi.edu">Mitchell Wills</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>walrus_pod_controller</build_depend>
  <build_depend>walrus_drive_controller</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>walrus_pod_controller</run_depend>
  <run_depend>walrus_drive_controller</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
